--- a/html/homepage.html
+++ b/html/homepage.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 <header class="header" id="down">
-<!--    <div class="header-content-wrapper">-->
+    <div class="header-content-wrapper">
         <div class="header__top">
-            <div class="container">
-                <div class="header__top-content d-flex align-items-center justify-content-end">
+            <div class="container-lg">
+                <div class="header__top-content d-flex align-items-center">
                     <div class="header__top-lang">
                         <label title="click me switch lang">
                             <input name="lang" type="radio" value="УК">
@@ -39,8 +39,9 @@
                         <a href="tel:0800211927">0800 211 927</a>
                     </div>
                     <div class="header__top-social">
-                        <a target="_blank" href="http://facebook.com/">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <a target="_blank" href="https://www.facebook.com/">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M24 12.0733C24 5.40541 18.6274 0 12 0C5.37258 0 0 5.40541 0 12.0733C0 18.0995 4.38823 23.0943 10.125 24V15.5633H7.07813V12.0733H10.125V9.41343C10.125 6.38755 11.9165 4.71615 14.6576 4.71615C15.9705 4.71615 17.3438 4.95195 17.3438 4.95195V7.92313H15.8306C14.3399 7.92313 13.875 8.85379 13.875 9.80857V12.0733H17.2031L16.6711 15.5633H13.875V24C19.6118 23.0943 24 18.0995 24 12.0733Z"
                                       fill="#B3B3BA"/>
                             </svg>
@@ -51,15 +52,19 @@
             </div>
         </div>
         <div class="header__navigation">
-            <nav class="navbar navbar-expand-lg ">
-                <div class="container">
+            <nav class="navbar navbar-expand-md ">
+                <div class="container-lg">
                     <a class="navbar-brand" href="#" target="_blank">
                         <img class="img-fluid logo-shadow" src="../assets/img/Logo.svg" alt="logo-top">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white"
+                             class="bi bi-list" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                  d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                        </svg>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav">
@@ -83,7 +88,7 @@
                 </div>
             </nav>
         </div>
-<!--    </div>-->
+    </div>
 </header>
 <main>
     <div class="bg-gradient">
@@ -93,8 +98,8 @@
             </div>
             <a href="#ancor" class="banner__scroll">
                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 42 42" fill="none">
-                        <circle opacity="0.5" cx="21" cy="21" r="20" stroke="white" stroke-width="2"/>
-                        <path d="M12 18L21 27L30 18" stroke="white" stroke-width="2"/>
+                    <circle opacity="0.5" cx="21" cy="21" r="20" stroke="white" stroke-width="2"/>
+                    <path d="M12 18L21 27L30 18" stroke="white" stroke-width="2"/>
                 </svg>
             </a>
         </section>
