--- a/html/homepage.html
+++ b/html/homepage.html
@@ -97,11 +97,74 @@
                 <h1>you legal solutions provider</h1>
             </div>
             <a href="#ancor" class="banner__scroll">
-                <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 42 42" fill="none">
+                <svg id="ancor" xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 42 42"
+                     fill="none">
                     <circle opacity="0.5" cx="21" cy="21" r="20" stroke="white" stroke-width="2"/>
                     <path d="M12 18L21 27L30 18" stroke="white" stroke-width="2"/>
                 </svg>
             </a>
+        </section>
+        <section class="menu-scroll">
+            <div class="container">
+                <div class="row menu-scroll__media-horizon">
+                    <div class="col-4 ">
+                        <div class="list-group" id="list-tab" role="tablist">
+                            <a class="list-group-item list-group-item-action active" id="list-home-list"
+                               data-bs-toggle="list" href="#list-home" role="tab"
+                               aria-controls="list-home">
+                                Consistent</a>
+                            <a class="list-group-item list-group-item-action" id="list-profile-list"
+                               data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Customer
+                                oriented</a>
+                            <a class="list-group-item list-group-item-action" id="list-messages-list"
+                               data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Innovative</a>
+                            <a class="list-group-item list-group-item-action" id="list-settings-list"
+                               data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Business
+                                oriented</a>
+                        </div>
+                    </div>
+                    <div class="col-1 separating-line d-flex justify-content-center">
+                        <div class="vr"></div>
+                    </div>
+                    <div class="col-7">
+                        <div class="tab-content" id="nav-tabContent">
+                            <div class="tab-pane fade show active" id="list-home" role="tabpanel"
+                                 aria-labelledby="list-home-list">
+                                <h4>We turn the idea of legal services</h4>
+                                <p>Consolidating many years of experience and practice, the company's lawyers accompany
+                                    complex
+                                    projects and achieve a number of important decisions for the industry. Many of them form
+                                    the
+                                    practice of applying the law of the sea in Ukraine.</p>
+                            </div>
+                            <div class="tab-pane fade" id="list-profile" role="tabpanel"
+                                 aria-labelledby="list-profile-list">
+                                <h4>Customer orientation means delivering supportive</h4>
+                                <p>Customer orientation is an approach to running a business that prioritizes customers and
+                                    their needs over those of the business. The goal of customer-oriented companies is to
+                                    satisfy customer’s needs to retain them for longer. Customer orientation also helps
+                                    companies attract customers to their offer naturally.</p>
+
+                            </div>
+                            <div class="tab-pane fade" id="list-messages" role="tabpanel"
+                                 aria-labelledby="list-messages-list">
+                                <h4>We turn over the idea of legal services</h4>
+                                <p>Consolidating many years of experience and practice, the company's lawyers accompany
+                                    complex projects and achieve the adoption of a number of decisions that are important
+                                    for the industry. Many people form the practice of applying the law of the sea in
+                                    Ukraine.</p>
+                            </div>
+                            <div class="tab-pane fade" id="list-settings" role="tabpanel"
+                                 aria-labelledby="list-settings-list">
+                                <h4>Quality is what we care about the most</h4>
+                                <p>HLEGAL is a reliable business partner, confirmed by stable cooperation with international
+                                    law firms, the trust of large Ukrainian and international companies, and the recognition
+                                    of professional ratings.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 </main>
