update our section

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -107,7 +107,7 @@
         <section class="menu-scroll">
             <div class="container">
                 <div class="row menu-scroll__media-horizon">
-                    <div class="col-4 ">
+                    <div class="col-12 col-md-4 ">
                         <div class="list-group" id="list-tab" role="tablist">
                             <a class="list-group-item list-group-item-action active" id="list-home-list"
                                data-bs-toggle="list" href="#list-home" role="tab"
@@ -123,10 +123,11 @@
                                 oriented</a>
                         </div>
                     </div>
-                    <div class="col-1 separating-line d-flex justify-content-center">
+                    <div class="col-12 col-md-1 separating-line d-flex justify-content-center">
                         <div class="vr"></div>
+                        <hr>
                     </div>
-                    <div class="col-7">
+                    <div class="col-12 col-md-7">
                         <div class="tab-content" id="nav-tabContent">
                             <div class="tab-pane fade show active" id="list-home" role="tabpanel"
                                  aria-labelledby="list-home-list">
@@ -164,6 +165,32 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="our-service">
+            <div class="container">
+                <a href="#">Services ></a>
+                <h3>What can we do better than others?</h3>
+                <div  class="row row-cols-2 row-cols-lg-12 g-2 g-lg-3">
+                        <div class="col">
+                            <img src="../assets/img/our-services/icon-1.svg" alt="picture">
+                        </div>
+                        <div class="col">
+                            <img src="../assets/img/our-services/icon-2.svg" alt="picture">
+                        </div>
+                        <div class="col">
+                            <img src="../assets/img/our-services/icon-3.svg" alt="picture">
+                        </div>
+                        <div class="col">
+                            <img src="../assets/img/our-services/icon-4.svg" alt="picture">
+                        </div>
+                        <div class="col">
+                            <img src="../assets/img/our-services/icon-5.svg" alt="picture">
+                        </div>
+                        <div class="col">
+                            <img src="../assets/img/our-services/icon-6.svg" alt="picture">
+                        </div>
+                        </div>
             </div>
         </section>
     </div>
