update our section media

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homepage</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/homepage.css">
-    <link rel="shortcut icon" href="../assets/img/h.svg" type="image/svg">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/homepage.css">
+    <link rel="shortcut icon" href="assets/img/h.svg" type="image/svg">
 </head>
 <body>
 <header class="header" id="down">
@@ -55,7 +55,7 @@
             <nav class="navbar navbar-expand-md ">
                 <div class="container-lg">
                     <a class="navbar-brand" href="#" target="_blank">
-                        <img class="img-fluid logo-shadow" src="../assets/img/Logo.svg" alt="logo-top">
+                        <img class="img-fluid logo-shadow" src="assets/img/Logo.svg" alt="logo-top">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -134,15 +134,18 @@
                                 <h4>We turn the idea of legal services</h4>
                                 <p>Consolidating many years of experience and practice, the company's lawyers accompany
                                     complex
-                                    projects and achieve a number of important decisions for the industry. Many of them form
+                                    projects and achieve a number of important decisions for the industry. Many of them
+                                    form
                                     the
                                     practice of applying the law of the sea in Ukraine.</p>
                             </div>
                             <div class="tab-pane fade" id="list-profile" role="tabpanel"
                                  aria-labelledby="list-profile-list">
                                 <h4>Customer orientation means delivering supportive</h4>
-                                <p>Customer orientation is an approach to running a business that prioritizes customers and
-                                    their needs over those of the business. The goal of customer-oriented companies is to
+                                <p>Customer orientation is an approach to running a business that prioritizes customers
+                                    and
+                                    their needs over those of the business. The goal of customer-oriented companies is
+                                    to
                                     satisfy customer’s needs to retain them for longer. Customer orientation also helps
                                     companies attract customers to their offer naturally.</p>
 
@@ -151,15 +154,18 @@
                                  aria-labelledby="list-messages-list">
                                 <h4>We turn over the idea of legal services</h4>
                                 <p>Consolidating many years of experience and practice, the company's lawyers accompany
-                                    complex projects and achieve the adoption of a number of decisions that are important
+                                    complex projects and achieve the adoption of a number of decisions that are
+                                    important
                                     for the industry. Many people form the practice of applying the law of the sea in
                                     Ukraine.</p>
                             </div>
                             <div class="tab-pane fade" id="list-settings" role="tabpanel"
                                  aria-labelledby="list-settings-list">
                                 <h4>Quality is what we care about the most</h4>
-                                <p>HLEGAL is a reliable business partner, confirmed by stable cooperation with international
-                                    law firms, the trust of large Ukrainian and international companies, and the recognition
+                                <p>HLEGAL is a reliable business partner, confirmed by stable cooperation with
+                                    international
+                                    law firms, the trust of large Ukrainian and international companies, and the
+                                    recognition
                                     of professional ratings.</p>
                             </div>
                         </div>
@@ -169,33 +175,62 @@
         </section>
         <section class="our-service">
             <div class="container">
-                <a href="#">Services ></a>
-                <h3>What can we do better than others?</h3>
-                <div  class="row row-cols-2 row-cols-lg-12 g-2 g-lg-3">
-                        <div class="col">
-                            <img src="../assets/img/our-services/icon-1.svg" alt="picture">
-                        </div>
-                        <div class="col">
-                            <img src="../assets/img/our-services/icon-2.svg" alt="picture">
-                        </div>
-                        <div class="col">
-                            <img src="../assets/img/our-services/icon-3.svg" alt="picture">
-                        </div>
-                        <div class="col">
-                            <img src="../assets/img/our-services/icon-4.svg" alt="picture">
-                        </div>
-                        <div class="col">
-                            <img src="../assets/img/our-services/icon-5.svg" alt="picture">
-                        </div>
-                        <div class="col">
-                            <img src="../assets/img/our-services/icon-6.svg" alt="picture">
-                        </div>
-                        </div>
+                <div class="our-service__description">
+                    <a href="#">
+                        Services
+                        <svg width="8" height="12" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
+                        </svg>
+                    </a>
+                    <h3>What can we do better than others?</h3>
+                </div>
+                <div class="row our-service__info-columns">
+                    <div class="col-12 col-md-4 col-lg-3 ">
+                        <img src="assets/img/our-services/icon-1.svg" alt="picture">
+                        <h3>IT and e-commerce</h3>
+                        <p>An endless stream of contracts, tax issues, labor relations, corporate papers - legal work
+                            distracts you from doing business. But there is not much work to do to hire an in-house
+                            lawyer.</p>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 ">
+                        <img src="assets/img/our-services/icon-2.svg" alt="picture">
+                        <h3>Comprehensive daily legal support</h3>
+                        <p>In addition, over time, the work will become the same type and uninteresting for a full-time
+                            lawyer. And we know very well how difficult it is to find a good candidate with experience
+                            in the field of information technology in Ukraine.</p>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 ">
+                        <img src="assets/img/our-services/icon-3.svg" alt="picture">
+                        <h3>Structuring corporate relationships</h3>
+                        <p>Instead of just providing legal services, we will hire a lawyer or a whole team that will fit
+                            into the daily life of your company.</p>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 ">
+                        <img src="assets/img/our-services/icon-4.svg" alt="picture">
+                        <h3>Building contractual relations</h3>
+                        <p>Once a week, or week after month, you have your own lawyer by your side. Anyone in the
+                            company can catch it at the coffee maker and just talk about current affairs instead of
+                            waiting for update status.</p>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 ">
+                        <img src="assets/img/our-services/icon-5.svg" alt="picture">
+                        <h3>Protection of business, intellectual property</h3>
+                        <p>And all the other time he will work on new diverse projects, so he will definitely not stop
+                            in professional development. One way or another, all Axon Partners will work for you instead
+                            of a corporate lawyer.</p>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 ">
+                        <img src="assets/img/our-services/icon-6.svg" alt="picture">
+                        <h3>Judicial representation</h3>
+                        <p>Is it a small, medium-sized company or a market leader? Local business or multinational
+                            company? Do you have your own legal department or not?</p>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
 </main>
 
-<script src="../js/bootstrap.bundle.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
