update carousel and write mixins

--- a/index.html
+++ b/index.html
@@ -229,7 +229,88 @@
             </div>
         </section>
     </div>
+    <section class="carousel-team">
+        <div class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active carousel-team__wrapper row">
+                        <img src="assets/img/team/Alexander.png" class="col-3 d-block w-25" alt="photo"
+                             title="one of our team">
+                        <div class="col-9 d-none d-sm-block carousel-team__caption">
+                            <a href="#">
+                                Команда
+                                <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
+                                </svg>
+                            </a>
+                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                                навіть у ситуаціях, коли більшість безсилі.</p>
+                            <p class="carousel-team__caption-name">Олександр Олександровський</p>
+                            <p class="carousel-team__caption-post">Керуючий партнер</p>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item carousel-team__wrapper row">
+                        <img src="assets/img/team/Evgeny.png" class="col-3 d-block w-25" alt="photo"
+                             title="one of our team">
+                        <div class="col-9 d-none d-sm-block carousel-team__caption">
+                            <a href="#">
+                                Команда
+                                <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
+                                </svg>
+                            </a>
+                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                                навіть у ситуаціях, коли більшість безсилі.</p>
+                            <p class="carousel-team__caption-name">Олександр Олександровський</p>
+                            <p class="carousel-team__caption-post">Керуючий партнер</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item carousel-team__wrapper row">
+                        <img src="assets/img/team/Julia.png" class="col-3 d-block w-25" alt="photo"
+                             title="one of our team">
+                        <div class="col-9 d-none d-sm-block carousel-team__caption">
+                            <a href="#">
+                                Команда
+                                <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
+                                </svg>
+                            </a>
+                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                                навіть у ситуаціях, коли більшість безсилі.</p>
+                            <p class="carousel-team__caption-name">Олександр Олександровський</p>
+                            <p class="carousel-team__caption-post">Керуючий партнер</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+        </div>
+    </section>
 </main>
+
+
 
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
