--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
                                     <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                                 </svg>
                             </a>
-                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та
+                                завжди гарантуємо чесну, вчасну допомогу,
                                 навіть у ситуаціях, коли більшість безсилі.</p>
                             <p class="carousel-team__caption-name">Олександр Олександровський</p>
                             <p class="carousel-team__caption-post">Керуючий партнер</p>
@@ -270,10 +271,11 @@
                                     <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                                 </svg>
                             </a>
-                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та
+                                завжди гарантуємо чесну, вчасну допомогу,
                                 навіть у ситуаціях, коли більшість безсилі.</p>
-                            <p class="carousel-team__caption-name">Олександр Олександровський</p>
-                            <p class="carousel-team__caption-post">Керуючий партнер</p>
+                            <p class="carousel-team__caption-name"> Евгений Патриков</p>
+                            <p class="carousel-team__caption-post">Пайовий партнер, адвокат</p>
                         </div>
                     </div>
                     <div class="carousel-item carousel-team__wrapper row">
@@ -287,10 +289,11 @@
                                     <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                                 </svg>
                             </a>
-                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та
+                                завжди гарантуємо чесну, вчасну допомогу,
                                 навіть у ситуаціях, коли більшість безсилі.</p>
-                            <p class="carousel-team__caption-name">Олександр Олександровський</p>
-                            <p class="carousel-team__caption-post">Керуючий партнер</p>
+                            <p class="carousel-team__caption-name">Юлія Волк</p>
+                            <p class="carousel-team__caption-post">Юрист, адвокат</p>
                         </div>
                     </div>
                 </div>
@@ -309,7 +312,6 @@
         </div>
     </section>
 </main>
-
 
 
 <script src="js/bootstrap.bundle.min.js"></script>
