--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
             </div>
         </section>
     </div>
-    <section class="carousel-team">
+        <section class="carousel-team">
         <div class="container">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                             aria-current="true" aria-label="Slide 1"></button>
@@ -241,10 +241,11 @@
                             aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item active carousel-team__wrapper row">
-                        <img src="assets/img/team/Alexander.png" class="col-3 d-block w-25" alt="photo"
-                             title="one of our team">
-                        <div class="col-9 d-none d-sm-block carousel-team__caption">
+                    <div class="carousel-item active carousel-team__wrapper row" data-bs-interval="40000">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <img src="assets/img/team/Alexander.png" class="photo-team" alt="photo" title="one of our team">
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-8 carousel-team__caption">
                             <a href="#">
                                 Команда
                                 <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
@@ -260,10 +261,11 @@
 
                         </div>
                     </div>
-                    <div class="carousel-item carousel-team__wrapper row">
-                        <img src="assets/img/team/Evgeny.png" class="col-3 d-block w-25" alt="photo"
-                             title="one of our team">
-                        <div class="col-9 d-none d-sm-block carousel-team__caption">
+                    <div class="carousel-item carousel-team__wrapper row" data-bs-interval="40000">
+                        <div class="col-12 col-md-6 col-lg-4 ">
+                            <img src="assets/img/team/Evgeny.png" class="photo-team" alt="photo" title="one of our team">
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-8  carousel-team__caption">
                             <a href="#">
                                 Команда
                                 <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
@@ -278,10 +280,11 @@
                             <p class="carousel-team__caption-post">Пайовий партнер, адвокат</p>
                         </div>
                     </div>
-                    <div class="carousel-item carousel-team__wrapper row">
-                        <img src="assets/img/team/Julia.png" class="col-3 d-block w-25" alt="photo"
-                             title="one of our team">
-                        <div class="col-9 d-none d-sm-block carousel-team__caption">
+                    <div class="carousel-item carousel-team__wrapper row" data-bs-interval="40000">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <img src="assets/img/team/Julia.png" class="photo-team" alt="photo" title="one of our team">
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-8 carousel-team__caption">
                             <a href="#">
                                 Команда
                                 <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
@@ -308,9 +311,14 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-
         </div>
     </section>
+        <section class="company">
+            <div class="container">
+                <h3 class="company__title">They already trust us</h3>
+
+            </div>
+        </section>
 </main>
 
 
