--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                             aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item active carousel-team__wrapper row" data-bs-interval="40000">
+                    <div class="carousel-item active carousel-team__wrapper row" data-bs-interval="4000">
                         <div class="col-12 col-md-6 col-lg-4">
                             <img src="assets/img/team/Alexander.png" class="photo-team" alt="photo" title="one of our team">
                         </div>
@@ -261,7 +261,7 @@
 
                         </div>
                     </div>
-                    <div class="carousel-item carousel-team__wrapper row" data-bs-interval="40000">
+                    <div class="carousel-item carousel-team__wrapper row" data-bs-interval="4000">
                         <div class="col-12 col-md-6 col-lg-4 ">
                             <img src="assets/img/team/Evgeny.png" class="photo-team" alt="photo" title="one of our team">
                         </div>
@@ -280,7 +280,7 @@
                             <p class="carousel-team__caption-post">Пайовий партнер, адвокат</p>
                         </div>
                     </div>
-                    <div class="carousel-item carousel-team__wrapper row" data-bs-interval="40000">
+                    <div class="carousel-item carousel-team__wrapper row" data-bs-interval="4000">
                         <div class="col-12 col-md-6 col-lg-4">
                             <img src="assets/img/team/Julia.png" class="photo-team" alt="photo" title="one of our team">
                         </div>
@@ -316,7 +316,20 @@
         <section class="company">
             <div class="container">
                 <h3 class="company__title">They already trust us</h3>
-
+                <div class="row">
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/1.png" alt=""></div>
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/2.png" alt=""></div>
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/3.png" alt=""></div>
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/4.png" alt=""></div>
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/5.png" alt=""></div>
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/6.png" alt=""></div>
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/7.png" alt=""></div>
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/8.png" alt=""></div>
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/9.png" alt=""></div>
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/10.png" alt=""></div>
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/11.png" alt=""></div>
+                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/12.png" alt=""></div>
+                </div>
             </div>
         </section>
 </main>
