--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/homepage.css">
     <link rel="shortcut icon" href="assets/img/h.svg" type="image/svg">
+    <link rel="stylesheet" href="scss/components/header/header-media.scss">
 </head>
 <body>
 <header class="header" id="down">
@@ -229,7 +230,7 @@
             </div>
         </section>
     </div>
-        <section class="carousel-team">
+    <section class="carousel-team">
         <div class="container">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -243,7 +244,8 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active carousel-team__wrapper row" data-bs-interval="4000">
                         <div class="col-12 col-md-6 col-lg-4">
-                            <img src="assets/img/team/Alexander.png" class="photo-team" alt="photo" title="one of our team">
+                            <img src="assets/img/team/Alexander.png" class="photo-team" alt="photo"
+                                 title="one of our team">
                         </div>
                         <div class="col-12 col-md-6 col-lg-8 carousel-team__caption">
                             <a href="#">
@@ -263,7 +265,8 @@
                     </div>
                     <div class="carousel-item carousel-team__wrapper row" data-bs-interval="4000">
                         <div class="col-12 col-md-6 col-lg-4 ">
-                            <img src="assets/img/team/Evgeny.png" class="photo-team" alt="photo" title="one of our team">
+                            <img src="assets/img/team/Evgeny.png" class="photo-team" alt="photo"
+                                 title="one of our team">
                         </div>
                         <div class="col-12 col-md-6 col-lg-8  carousel-team__caption">
                             <a href="#">
@@ -313,25 +316,50 @@
             </div>
         </div>
     </section>
-        <section class="company">
-            <div class="container">
-                <h3 class="company__title">They already trust us</h3>
-                <div class="row">
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/1.png" alt=""></div>
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/2.png" alt=""></div>
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/3.png" alt=""></div>
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/4.png" alt=""></div>
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/5.png" alt=""></div>
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/6.png" alt=""></div>
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/7.png" alt=""></div>
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/8.png" alt=""></div>
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/9.png" alt=""></div>
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/10.png" alt=""></div>
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/11.png" alt=""></div>
-                    <div class="col-sm-3 col-xs-12"><img src="assets/img/company/12.png" alt=""></div>
-                </div>
+
+    <section class="company">
+        <div class="container">
+            <h3 class="company__title">They already trust us</h3>
+            <div class="row">
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-first">
+                     <img src="assets/img/company/1.png" alt="logo our partner" title="our partner">
+                </a>
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-second">
+                     <img src="assets/img/company/2.png" alt="logo our partner" title="our partner">
+                </a>
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-third">
+                     <img src="assets/img/company/3.png" alt="logo our partner" title="our partner">
+                </a>
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-fourth">
+                     <img src="assets/img/company/4.png" alt="logo our partner" title="our partner">
+                </a>
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-fifth">
+                     <img src="assets/img/company/5.png" alt="logo our partner" title="our partner">
+                </a>
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-sixth">
+                     <img src="assets/img/company/6.png" alt="logo our partner" title="our partner">
+                </a>
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-seventh">
+                     <img src="assets/img/company/7.png" alt="logo our partner" title="our partner">
+                </a>
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-eight">
+                     <img src="assets/img/company/8.png" alt="logo our partner" title="our partner">
+                </a>
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-nineth">
+                     <img src="assets/img/company/9.png" alt="logo our partner" title="our partner">
+                </a>
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-tenth">
+                    <img src="assets/img/company/10.png" alt="logo our partner" title="our partner">
+                </a>
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-eleventh">
+                    <img src="assets/img/company/11.png" alt="logo our partner" title="our partner">
+                </a>
+                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-twelfth">
+                    <img src="assets/img/company/12.png" alt="logo our partner" title="our partner">
+                </a>
             </div>
-        </section>
+        </div>
+    </section>
 </main>
 
 
