--- a/index.html
+++ b/index.html
@@ -322,40 +322,40 @@
             <h3 class="company__title">They already trust us</h3>
             <div class="row">
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-first">
-                     <img src="assets/img/company/1.png" alt="logo our partner" title="our partner">
+                     <img src="./assets/img/company/1.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-second">
-                     <img src="assets/img/company/2.png" alt="logo our partner" title="our partner">
+                     <img src="./assets/img/company/2.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-third">
-                     <img src="assets/img/company/3.png" alt="logo our partner" title="our partner">
+                     <img src="./assets/img/company/3.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-fourth">
-                     <img src="assets/img/company/4.png" alt="logo our partner" title="our partner">
+                     <img src="./assets/img/company/4.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-fifth">
-                     <img src="assets/img/company/5.png" alt="logo our partner" title="our partner">
+                     <img src="./assets/img/company/5.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-sixth">
-                     <img src="assets/img/company/6.png" alt="logo our partner" title="our partner">
+                     <img src="./assets/img/company/6.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-seventh">
-                     <img src="assets/img/company/7.png" alt="logo our partner" title="our partner">
+                     <img src="./assets/img/company/7.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-eight">
-                     <img src="assets/img/company/8.png" alt="logo our partner" title="our partner">
+                     <img src="./assets/img/company/8.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-nineth">
-                     <img src="assets/img/company/9.png" alt="logo our partner" title="our partner">
+                     <img src="./assets/img/company/9.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-tenth">
-                    <img src="assets/img/company/10.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/10.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-eleventh">
-                    <img src="assets/img/company/11.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/11.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-twelfth">
-                    <img src="assets/img/company/12.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/12.png" alt="logo our partner" title="our partner">
                 </a>
             </div>
         </div>
