--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -322,31 +322,31 @@
             <h3 class="company__title">They already trust us</h3>
             <div class="row">
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-first">
-                     <img src="./assets/img/company/1.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/1.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-second">
-                     <img src="./assets/img/company/2.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/2.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-third">
-                     <img src="./assets/img/company/3.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/3.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-fourth">
-                     <img src="./assets/img/company/4.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/4.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-fifth">
-                     <img src="./assets/img/company/5.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/5.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-sixth">
-                     <img src="./assets/img/company/6.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/6.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-seventh">
-                     <img src="./assets/img/company/7.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/7.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-eight">
-                     <img src="./assets/img/company/8.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/8.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-nineth">
-                     <img src="./assets/img/company/9.png" alt="logo our partner" title="our partner">
+                    <img src="./assets/img/company/9.png" alt="logo our partner" title="our partner">
                 </a>
                 <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-tenth">
                     <img src="./assets/img/company/10.png" alt="logo our partner" title="our partner">
@@ -360,8 +360,61 @@
             </div>
         </div>
     </section>
-</main>
+    <section class="articles">
+        <div class="container">
+            <div class="articles__heading">
+                <a href="#" class="articles__heading-link">
+                    publications
+                    <svg width="8" height="12" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
+                    </svg>
+                </a>
+                <h3 class="articles__heading-title">We have something to tell </h3>
+            </div>
 
+            <div class="articles__wrapper d-flex">
+                <div class="articles__wrapper-card">
+                    <img src="./assets/img/publication/Publication-1.png" class="" alt="">
+                    <div class="articles__wrapper-card-wrap">
+                        <h4 class="articles__wrapper-card-wrap-title">Equity associate</h4>
+                        <p class="articles__wrapper-card-wrap-data">April 22</p>
+                        <hr class="articles__wrapper-card-wrap-line">
+                        <p class="articles__wrapper-card-wrap-text">I'm a jun on projects. I am a co-owner of a law
+                            firm. How it happened. Before entering my
+                            parents
+                            told me that if I…</p>
+                    </div>
+                </div>
+                <div class="articles__wrapper-card">
+                    <img src="./assets/img/publication/Publication-2.png" class="" alt="">
+                    <div class="articles__wrapper-card-wrap">
+                        <h4 class="articles__wrapper-card-wrap-title">Penalty for the Good Corporation: what will happen
+                            to Google and others for violating the
+                            GDPR</h4>
+                        <p class="articles__wrapper-card-wrap-data">September 29</p>
+                        <hr class="articles__wrapper-card-wrap-line">
+                        <p class="articles__wrapper-card-wrap-text">And why the recovery of 50 million euros could be a
+                            fateful precedent According to Mind.ua
+                            January 21 National Commission for Data Protection.</p>
+                    </div>
+                </div>
+                <div class="articles__wrapper-card">
+                    <img src="./assets/img/publication/Publication-3.png" class="" alt="">
+                    <div class="articles__wrapper-card-wrap">
+                        <h4 class="articles__wrapper-card-wrap-title">Millennial Testament</h4>
+                        <p class="articles__wrapper-card-wrap-data">August 19</p>
+                        <hr class="articles__wrapper-card-wrap-line">
+                        <p class="articles__wrapper-card-wrap-text">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical
+                            legacy of the Ukrainian generation X looks like this: an apartment in…</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+<footer>
+
+</footer>
 
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
