--- a/index.html
+++ b/index.html
@@ -316,45 +316,44 @@
             </div>
         </div>
     </section>
-
     <section class="company">
         <div class="container">
             <h3 class="company__title">They already trust us</h3>
             <div class="row">
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-first">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-first">
                     <img src="./assets/img/company/1.png" alt="logo our partner" title="our partner">
                 </a>
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-second">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-second">
                     <img src="./assets/img/company/2.png" alt="logo our partner" title="our partner">
                 </a>
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-third">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-third">
                     <img src="./assets/img/company/3.png" alt="logo our partner" title="our partner">
                 </a>
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-fourth">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-fourth">
                     <img src="./assets/img/company/4.png" alt="logo our partner" title="our partner">
                 </a>
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-fifth">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-fifth">
                     <img src="./assets/img/company/5.png" alt="logo our partner" title="our partner">
                 </a>
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-sixth">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-sixth">
                     <img src="./assets/img/company/6.png" alt="logo our partner" title="our partner">
                 </a>
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-seventh">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-seventh">
                     <img src="./assets/img/company/7.png" alt="logo our partner" title="our partner">
                 </a>
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-eight">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-eight">
                     <img src="./assets/img/company/8.png" alt="logo our partner" title="our partner">
                 </a>
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-nineth">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-nineth">
                     <img src="./assets/img/company/9.png" alt="logo our partner" title="our partner">
                 </a>
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-tenth">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-tenth">
                     <img src="./assets/img/company/10.png" alt="logo our partner" title="our partner">
                 </a>
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-eleventh">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-eleventh">
                     <img src="./assets/img/company/11.png" alt="logo our partner" title="our partner">
                 </a>
-                <a href="#" class="col-md-3 col-sm-4 col-xs-12 company__logo-twelfth">
+                <a href="#" class="col-xl-3 col-md-4 col-sm-6 col-xs-12 company__logo-twelfth">
                     <img src="./assets/img/company/12.png" alt="logo our partner" title="our partner">
                 </a>
             </div>
@@ -371,7 +370,6 @@
                 </a>
                 <h3 class="articles__heading-title">We have something to tell </h3>
             </div>
-
             <div class="articles__wrapper d-flex">
                 <div class="articles__wrapper-card">
                     <img src="./assets/img/publication/Publication-1.png" class="" alt="">
@@ -404,7 +402,8 @@
                         <h4 class="articles__wrapper-card-wrap-title">Millennial Testament</h4>
                         <p class="articles__wrapper-card-wrap-data">August 19</p>
                         <hr class="articles__wrapper-card-wrap-line">
-                        <p class="articles__wrapper-card-wrap-text">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical
+                        <p class="articles__wrapper-card-wrap-text">What and how modern vloggers, opinion leaders and
+                            crypto-millionaires will inherit A typical
                             legacy of the Ukrainian generation X looks like this: an apartment in…</p>
                     </div>
                 </div>
@@ -412,7 +411,42 @@
         </div>
     </section>
 </main>
-<footer>
+
+
+<footer class="footer">
+    <div class="container">
+
+        <div class="footer__line"></div>
+
+        <div class="footer__wrapper d-flex">
+            <address class="footer__wrapper-address d-flex align-items-center m-0">
+                <p class="footer__wrapper-address-text">Kyiv, Mechnikova str, 14/1</p>
+                <a href="https://www.google.com/maps/place/%D0%9F%D0%B0%D0%BC'%D1%8F%D1%82%D0%BD%D0%B8%D0%BA+%D0%B6%D0%B5%D1%80%D1%82%D0%B2%D0%B0%D0%BC+%D1%82%D0%B5%D1%80%D0%BE%D1%80%D0%B8%D0%B7%D0%BC%D1%83/@50.4366698,30.5323592,20.36z/data=!4m13!1m7!3m6!1s0x40d4cf07295b8e39:0x17b2112e2dc0e7a!2z0LLRg9C70LjRhtGPINCc0LXRh9C90LjQutC-0LLQsCwgMTQvMSwg0JrQuNGX0LIsIDAyMDAw!3b1!8m2!3d50.436795!4d30.532705!3m4!1s0x40d4cf00d47ca801:0x83be22c2a2ec8095!8m2!3d50.4368159!4d30.532211"
+                   class="footer__wrapper-address-link" target="_blank">on map</a>
+            </address>
+            <div class="footer__wrapper-copy d-flex justify-content-end align-items-center">
+                © 2021 HLEGAL Law company, LLC
+            </div>
+
+            <div class="footer__wrapper-contact d-flex">
+                <div class="footer__social">
+                    <a target="_blank" href="https://www.facebook.com/">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path d="M24 12.0733C24 5.40541 18.6274 0 12 0C5.37258 0 0 5.40541 0 12.0733C0 18.0995 4.38823 23.0943 10.125 24V15.5633H7.07813V12.0733H10.125V9.41343C10.125 6.38755 11.9165 4.71615 14.6576 4.71615C15.9705 4.71615 17.3438 4.95195 17.3438 4.95195V7.92313H15.8306C14.3399 7.92313 13.875 8.85379 13.875 9.80857V12.0733H17.2031L16.6711 15.5633H13.875V24C19.6118 23.0943 24 18.0995 24 12.0733Z"
+                                  fill="#B3B3BA"/>
+                        </svg>
+                    </a>
+                </div>
+                <div class="footer__number">
+                    <a href="tel:0800 211 927">0800 211 927</a>
+                </div>
+                <div class="footer__email">
+                    <a href="mailto:contact@forstudy.space">contact@forstudy.space</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </footer>
 
